[package]
name = "preadv2_bug"
version = "0.1.0"
authors = ["br0adcast <br0adcast.007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"], path="../tokio/tokio" }

